Added random events and progress bar function.